Fixed nav alert icon alignment

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -127,8 +127,8 @@ body {
 }
 
 .main-nav {
-  i.icon-fixed-width {
-   vertical-align: middle;
+  .label i[class^="icon-"] {
+    vertical-align: baseline;
   }
 
   .multiline-tab-icon {
